index and css modification

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR-->
     <header>
     <navbar  class="navigation">
-        <ul class="nav-list">
+        <ul>
             <li>
                <a href="http://gmail.com">Gmail</a> 
             </li>
@@ -35,20 +35,17 @@
         <img src="images/googlelogo_color_272x92dp.png">
     </div>
 
-    <div id="search">
-        <i id="magnifier-glas" class="fa fa-search" aria-hidden="true"></i>
-        <input type="text" class="searchGoogle" placeholder="Search Google">
+    <div class="search">
+        <i id="magnifier-glass" class="fa fa-search" aria-hidden="true"></i>
+        <input type="text" class="searchGoogle" placeholder="">
         <i id="microphone" class="fa fa-microphone" aria-hidden="true"></i>
     </div>
 
-    <div id="btn">
-        <button id="btn1"  type="button">Google Search</button>
-        <button id="btn2"  type="button">I'm taking a guess</button>
+    <div id="lucky">
+        <button class="btn"  type="button">Google Search</button>
+        <button class="btn"  type="button">I'm Feeling Lucky</button>
     </div>
 
-    <div id="text">
-        <p>Google offered in: <a id="language" href="#">English</a>  <a id="language" href="#">Español</a>  <a id="language" href="#">Dutch</a> </p>
-    </div>
 </div>   
 <!--FOOTER-->
 <footer>
