--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <a href="https://www.google.nl/imghp?hl=en&tab=ri&ogbl">Images</a>
             </li>
             <li>
-                <img class="navimage" width="40" style="vertical-align:middle" src="images/title-logo.png">
+                <img class="navimage" width="30" style="vertical-align:middle" src="images/Apps-Google-Chrome-App-List-icon.png">
             </li>
             <li>
-                <img class="navimage" width="40" style="vertical-align:middle" src="images/userimage.jpg">
+                <img id="user-image"class="navimage" width="30" style="vertical-align:middle" src="images/userimage.jpg">
             </li>
         </ul>
     </navbar>
