--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
     <!-- NAVBAR-->
     <header>
-    <navbar  class="navigation">
+    <nav  class="navigation">
         <ul>
             <li>
                <a href="http://gmail.com">Gmail</a> 
@@ -27,7 +27,7 @@
                 <img id="user-image"class="navimage" width="30" style="vertical-align:middle" src="images/userimage.jpg">
             </li>
         </ul>
-    </navbar>
+    </nav>
     </header>
 <!-- SEARCH BAR / MAIN PAGE-->
 <div  class="center">
