--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <body>
     <!-- NAVBAR-->
     <header>
-    <nav  class="navigation">
-        <ul>
+    <nav>
+        <ul class="navigation">
             <li>
                <a href="http://gmail.com">Gmail</a> 
             </li>
             <li>
-                <a href="https://www.google.nl/imghp?hl=en&tab=ri&ogbl">Images</a>
+                <a  href="https://www.google.nl/imghp?hl=en&tab=ri&ogbl">Images</a>
             </li>
             <li>
                 <img class="navimage" width="30" style="vertical-align:middle" src="images/Apps-Google-Chrome-App-List-icon.png">
