modified index and style

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <!-- NAVBAR-->
     <header>
     <nav>
-        <ul class="navigation">
+        <ul>
             <li>
                <a href="http://gmail.com">Gmail</a> 
             </li>
             <li>
                 <a  href="https://www.google.nl/imghp?hl=en&tab=ri&ogbl">Images</a>
+            </li> 
+            <li>
+                <img class="navimage" width="30px" height="30px" style="vertical-align:middle" src="images/Apps-Google-Chrome-App-List-icon.png">
             </li>
             <li>
-                <img class="navimage" width="30" style="vertical-align:middle" src="images/Apps-Google-Chrome-App-List-icon.png">
-            </li>
-            <li>
-                <img id="user-image"class="navimage" width="30" style="vertical-align:middle" src="images/userimage.jpg">
+                <img class="navimage" width="30px" height="30px" style="vertical-align:middle" src="images/userimage.jpg">
             </li>
         </ul>
     </nav>
@@ -36,18 +36,19 @@
     </div>
 
     <div class="search">
-        <i id="magnifier-glass" class="fa fa-search" aria-hidden="true"></i>
+        <i   class="fa fa-search" aria-hidden="true"></i>
         <input type="text" class="searchGoogle" placeholder="">
-        <i id="microphone" class="fa fa-microphone" aria-hidden="true"></i>
+        <i id="microphone"  class="fa fa-microphone" aria-hidden="true"></i>
     </div>
 
-    <div id="lucky">
+    <div class="lucky">
         <button class="btn"  type="button">Google Search</button>
         <button class="btn"  type="button">I'm Feeling Lucky</button>
     </div>
 </div>   
 <!--FOOTER-->
 <footer>
+    <nav class="bottom">
         <ul class="footer-left">
             <li>
                 <a href="#">About</a>
@@ -73,6 +74,7 @@
                 <a href="#">Settings</a>
             </li>
         </ul>
+    </nav>
 </footer>
 </body>
 </html>
